--- a/static/miniwriter.html
+++ b/static/miniwriter.html
@@ -33,12 +33,20 @@ pre {
 <pre id="log"></pre>
 
 <script>
-// ===== NÃO MUDA NOMES =====
-const REPO = "alexandreribeiro04022035-arch/Quantum-";
+const REPO = "zozimofreitas3-sys/streaming-app2034";
 const FILE_PATH = "cache/ia-registro.json";
-const TOKEN = "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";
-
+const TOKEN = "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";
 const JSON_URL = "https://api.github.com/repos/" + REPO + "/contents/" + FILE_PATH;
+  
+
+
+
+  
+// ===== NÃO MUDA NOMES =====
+//const REPO = "alexandreribeiro04022035-arch/Quantum-";
+//const FILE_PATH = "cache/ia-registro.json";
+//const TOKEN = "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";
+//const JSON_URL = "https://api.github.com/repos/" + REPO + "/contents/" + FILE_PATH;
 
 const log = msg => {
   document.getElementById("log").textContent += msg + "\n";
