--- a/static/drive-links.html
+++ b/static/drive-links.html
@@ -1,41 +1,46 @@
-<h1> Links para, 2 m'us Drives </h1>
-<br>
-<a href="https://drive.google.com/drive/folders/15MH9hbnKkq3iP8u5618MANYWCAeAlOvq"  >
-e-mail drive franklincanela90@gmail.com  </a>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Links para Drives</title>
+</head>
+<body>
+    <h1> Links para, 2 m'us Drives </h1>
+    <br>
+    <a href="https://drive.google.com/drive/folders/15MH9hbnKkq3iP8u5618MANYWCAeAlOvq"  >
+    e-mail drive franklincanela90@gmail.com  </a>
 
-<br>
-<a  href="https://drive.google.com/drive/folders/1XAxUofAtoc8mSutrYbOieEKxztqF_wAr"  >
-email drive do looneytunesoficialbr@gmail.com   </a>
+    <br>
+    <a  href="https://drive.google.com/drive/folders/1XAxUofAtoc8mSutrYbOieEKxztqF_wAr"  >
+    email drive do looneytunesoficialbr@gmail.com   </a>
 
+    <br>
+    <a  href="https://drive.google.com/drive/folders/17M3R60Iv8mMG5WlSETiC_4TzFUp-PMNb    " >
+    email drive  sacbydot@gmail.com </a>
 
+    <br>
+    <a  href="https://drive.google.com/drive/folders/1kPvN8fl51MfWyKic6-xLXjLSj0iC3EI8    " >
+    email drive  alexandreribeiro11967885939@gmail.com  </a>
 
-<br>
-<a  href="https://drive.google.com/drive/folders/17M3R60Iv8mMG5WlSETiC_4TzFUp-PMNb    " >
-email drive  sacbydot@gmail.com </a>
+    <br>
+    <a  href=" https://drive.google.com/drive/folders/10F-x-9CYqE2GWZ39DoCC6tGe7XKyzEdh  " >
+    email drive  fakesmilemail@gmail.com </a>
 
-<br>
-<a  href="https://drive.google.com/drive/folders/1kPvN8fl51MfWyKic6-xLXjLSj0iC3EI8    " >
-email drive  alexandreribeiro11967885939@gmail.com  </a>
+    <br>
+    <a  href="https://drive.google.com/drive/folders/1Je9FaClnEfzsKgBy5Ulxme_QBTGBhdWw    " >
+    email drive  fakegab01@gmail.com </a>
 
+    <br>
+    <a  href=https://drive.google.com/drive/folders/1tUh-kDe8H4M2ony_zDj8Fk4HPHRMnK7i >
+    email drive zozimofreitas3@gmail.com </a>
 
-<br>
-<a  href=" https://drive.google.com/drive/folders/10F-x-9CYqE2GWZ39DoCC6tGe7XKyzEdh  " >
-email drive  fakesmilemail@gmail.com </a>
+    <br>
+    <a  href="https://drive.google.com/drive/folders/1-RNVrXDmONfAB1AuVVExAaugrNZsR2DN" > 
+    drive email logbonotto@gmail.com </a>
+    <br>
 
-<br>
-<a  href="https://drive.google.com/drive/folders/1Je9FaClnEfzsKgBy5Ulxme_QBTGBhdWw    " >
-email drive  fakegab01@gmail.com </a>
-
-
-<br>
-<a  href=https://drive.google.com/drive/folders/1tUh-kDe8H4M2ony_zDj8Fk4HPHRMnK7i >
-email drive zozimofreitas3@gmail.com </a>
-
-
-<br>
-<a  href="https://drive.google.com/drive/folders/1-RNVrXDmONfAB1AuVVExAaugrNZsR2DN" > 
-drive email logbonotto@gmail.com </a>
-<br>
-
-<a  href="https://drive.google.com/drive/folders/12rI6befdxiBIs4w5yk_b462fVjcJcQEE"  >  
-Drive Sandra fotos sandraluciagomes0706@gmail.com</a>
+    <a  href="https://drive.google.com/drive/folders/12rI6befdxiBIs4w5yk_b462fVjcJcQEE"  >  
+    Drive Sandra fotos sandraluciagomes0706@gmail.com</a>
+</body>
+</html>
